Refactor using kt lint